# robocup-software

./: .gitmodules  CMakeLists.txt  package.xml
launch/: sim.launch.py
robocup_common/: CMakeLists.txt  package.xml
robocup_common/include/robocup_common/Geometry2d/: Point.hpp
robocup_common/protobuf/: CMakeLists.txt
robocup_common/src/: Arc.cpp  Circle.cpp  CompositeShape.cpp  CompositeShapeTest.cpp  Line.cpp  LineTest.cpp  Point.cpp  Polygon.cpp  Rect.cpp  Segment.cpp  TransformMatrix.cpp
soccer/: CMakeLists.txt  main.cpp  package.xml
soccer/gameplay/: GameplayModule.cpp
soccer/joystick/: GamepadController.cpp
soccer/launch/: sim.launch.py
